# http-tui

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/events/: handler.rs
src/http/: client.rs  mod.rs
src/models/: collection.rs  environment.rs  mod.rs  response.rs
src/storage/: yaml.rs
src/ui/: collection_tree.rs  confirm_dialog.rs  create_dialog.rs  dir_input_dialog.rs  env_editor.rs  help.rs  mod.rs  request_editor.rs  response_viewer.rs
